# l.peppoloni-gmail.com

./: CMakeLists.txt
include/visual_tracking/: visual_tracking.h
src/: bounding_box.h  correlation_tracker.cpp  correlation_tracker.h  tracker.h
tests/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  doa.cpp
